fix: fold <AppNavigation/> if user clicks <AppChatToggler/> on mobile

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -157,7 +157,7 @@ table {
   padding: 2px 8px;
 }
 
-.recent-posts,
+.recent-posts .row,
 .table-posts,
 .c-post {
   font-family: Gulim, sans-serif, 'IBM Plex Sans KR';
